[project]
name = "toy-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "ruff>=0.14.3",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
